Moved to folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,20 @@ project(Deflate)
 
 set(CMAKE_CXX_STANDARD 20)
 add_executable(Deflate src/main.cpp
-        src/deflate/LZ77.cpp
-        src/deflate/LZ77.hpp
-        src/deflate/BitBuffer.cpp
-        src/deflate/BitBuffer.hpp
-        src/deflate/FixedHuffmanEncoder.cpp
-        src/deflate/FixedHuffmanEncoder.hpp
-        src/deflate/FixedHuffmanDecoder.cpp
-        src/deflate/FixedHuffmanDecoder.hpp
-        src/deflate/HuffmanTree.cpp
-        src/deflate/HuffmanTree.hpp
-        src/deflate/DynamicHuffmanEncoder.cpp
-        src/deflate/DynamicHuffmanEncoder.hpp)
+        src/deflate/lz/LZ77.cpp
+        src/deflate/lz/LZ77.hpp
+        src/deflate/buffer/BitBuffer.cpp
+        src/deflate/buffer/BitBuffer.hpp
+        src/deflate/encoders/FixedHuffmanEncoder.cpp
+        src/deflate/encoders/FixedHuffmanEncoder.hpp
+        src/deflate/decoders/FixedHuffmanDecoder.cpp
+        src/deflate/decoders/FixedHuffmanDecoder.hpp
+        src/deflate/tree/HuffmanTree.cpp
+        src/deflate/tree/HuffmanTree.hpp
+        src/deflate/encoders/DynamicHuffmanEncoder.cpp
+        src/deflate/encoders/DynamicHuffmanEncoder.hpp
+        src/deflate/decoders/DynamicHuffmanDecoder.cpp
+        src/deflate/decoders/DynamicHuffmanDecoder.hpp)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_compile_options(Deflate PRIVATE -mavx -mavx2 -ffast-math)
