Added class for deflating block with heuristic choosing huffman encoding type.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,23 @@ project(Deflate)
 
 set(CMAKE_CXX_STANDARD 20)
 add_executable(Deflate src/main.cpp
-        src/deflate/lz/LZ77.cpp
-        src/deflate/lz/LZ77.hpp
-        src/deflate/buffer/BitBuffer.cpp
-        src/deflate/buffer/BitBuffer.hpp
-        src/deflate/encoders/FixedHuffmanEncoder.cpp
-        src/deflate/encoders/FixedHuffmanEncoder.hpp
-        src/deflate/decoders/FixedHuffmanDecoder.cpp
-        src/deflate/decoders/FixedHuffmanDecoder.hpp
-        src/deflate/tree/HuffmanTree.cpp
-        src/deflate/tree/HuffmanTree.hpp
-        src/deflate/encoders/DynamicHuffmanEncoder.cpp
-        src/deflate/encoders/DynamicHuffmanEncoder.hpp
-        src/deflate/decoders/DynamicHuffmanDecoder.cpp
-        src/deflate/decoders/DynamicHuffmanDecoder.hpp)
+        src/compression/lz/LZ77.cpp
+        src/compression/lz/LZ77.hpp
+        src/compression/buffer/BitBuffer.cpp
+        src/compression/buffer/BitBuffer.hpp
+        src/compression/encoders/FixedHuffmanEncoder.cpp
+        src/compression/encoders/FixedHuffmanEncoder.hpp
+        src/compression/decoders/FixedHuffmanDecoder.cpp
+        src/compression/decoders/FixedHuffmanDecoder.hpp
+        src/compression/tree/HuffmanTree.cpp
+        src/compression/tree/HuffmanTree.hpp
+        src/compression/encoders/DynamicHuffmanEncoder.cpp
+        src/compression/encoders/DynamicHuffmanEncoder.hpp
+        src/compression/decoders/DynamicHuffmanDecoder.cpp
+        src/compression/decoders/DynamicHuffmanDecoder.hpp
+        src/compression/Compression.hpp
+        src/compression/deflate/Deflator.cpp
+        src/compression/deflate/Deflator.hpp)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_compile_options(Deflate PRIVATE -mavx -mavx2 -ffast-math)
