Added class Inflator for detecting compressed block type and decoding.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,9 @@ add_executable(Deflate src/main.cpp
         src/compression/decoders/DynamicHuffmanDecoder.hpp
         src/compression/Compression.hpp
         src/compression/deflate/Deflator.cpp
-        src/compression/deflate/Deflator.hpp)
+        src/compression/deflate/Deflator.hpp
+        src/compression/deflate/Inflator.cpp
+        src/compression/deflate/Inflator.hpp)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_compile_options(Deflate PRIVATE -mavx -mavx2 -ffast-math)
